Wed Apr 25 12:16:36 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/X11/gdkevents-x11.c (gdk_event_translate): Test for 
	window == NULL in a number of cases.

	* tests/testdnd.c: Set module path for gdk-pixbuf.

Thu Apr 19 16:11:07 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/Makefile.am xembed.h: File containing #defines
	for XEMBED protocol.

	* gtk/gtkplug.[ch] gtk/gtksocket.[ch]: 

	- Change protocol from old plug/socket specific protocol
	  to XEMBED draft
	- Various fixes to work with GTK+-2.0

	Still quite a bit of work to do here to handle initiation
	from the socket side (as specified by XEMBED), to handle
	the more advanced features of XEMBED, and to figure out
	a good way to handle same-app embedding with less overhead
	than using full XEMBED.

Wed Apr 18 16:04:28 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.[ch] (gtk_window_real_set_focus): Keep
	track of whether the toplevel has the focus; only send
	focus-in events to the focus widget when the window
	actually has the focus.

2001-04-25  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkwindow.h: set_decorations_hint and set_functions_hint
	were still in the header

2001-04-24  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtkclist.[ch]:
	* gtk/gtkctree.c:
	When there is a row highlighted for D'n'D it must alse
	be painted hightlighted on exposes. Otherwise exposes from
	the icon being dragged will mess up the hightlight.

	* gtk/gtkfontsel.c:
	Don't recenter selected font when exposing the font family
	clist. This means you can now actually scroll the font family
	list.

	* gtk/gtknotebook.c:
	Fix focus movement on scrolling tabs that are placed on the left
	and right.

2001-04-21  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextdisplay.c (gtk_text_layout_draw): handle 0-height
	empty/invisible lines.

	* gtk/gtktextiter.c (gtk_text_iter_set_visible_line_offset)
	(gtk_text_iter_set_visible_line_index): new functions to set
	indexes excluding invisible text
