@@ -26,7 +26,6 @@ INCLUDES = @STRIP_BEGIN@ \
 	-DGTK_DISABLE_DEPRECATED 			\
 	@GTK_DEBUG_FLAGS@				\
 	@GTK_XIM_FLAGS@					\
-	@GTK_LOCALE_FLAGS@				\
 	@PANGO_CFLAGS@					\
 	@GLIB_CFLAGS@					\
 	@more_cflags@					\
