@@ -55,7 +55,6 @@ GTKDOC_CFLAGS = @STRIP_BEGIN@ 				\
 	-DGTK_DISABLE_COMPAT_H				\
 	@GTK_DEBUG_FLAGS@				\
 	@GTK_XIM_FLAGS@					\
-	@GTK_LOCALE_FLAGS@				\
 	@PANGO_CFLAGS@					\
 	@GLIB_CFLAGS@					\
 	@more_cflags@					\
