@@ -71,7 +71,6 @@ GTKDOC_CFLAGS = @STRIP_BEGIN@ 				\
 	-DGTK_ENABLE_BROKEN				\
 	@GTK_DEBUG_FLAGS@				\
 	@GTK_XIM_FLAGS@					\
-	@GTK_LOCALE_FLAGS@				\
 	@PANGO_CFLAGS@					\
 	@GLIB_CFLAGS@					\
 	@more_cflags@					\
