@@ -18,7 +18,6 @@ common_includes = @STRIP_BEGIN@ 	\
 	-I$(top_srcdir)/gdk-pixbuf 	\
 	@GTK_DEBUG_FLAGS@ 		\
 	@GTK_XIM_FLAGS@			\
-	@GTK_LOCALE_FLAGS@		\
 	@PANGO_CFLAGS@			\
 	@GLIB_CFLAGS@			\
 	@more_cflags@ 			\
