@@ -12,7 +12,6 @@ INCLUDES = @STRIP_BEGIN@ 	\
 	@FREETYPE_CFLAGS@	\
 	@GTK_DEBUG_FLAGS@ 	\
 	@GTK_XIM_FLAGS@		\
-	@GTK_LOCALE_FLAGS@	\
 	@GLIB_CFLAGS@		\
 	@PANGO_CFLAGS@		\
 @STRIP_END@
