@@ -18,7 +18,6 @@ INCLUDES = @STRIP_BEGIN@ \
 	-I$(top_srcdir)/gdk-pixbuf -I../gdk-pixbuf	\
 	@GTK_DEBUG_FLAGS@				\
 	@GTK_XIM_FLAGS@					\
-	@GTK_LOCALE_FLAGS@				\
 	@PANGO_CFLAGS@					\
 	@GLIB_CFLAGS@					\
 	@more_cflags@					\
